Add every other  rooms except death and victory scene

--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
           It says: "Hello, <span class="name"></span>"
         </p>
         <p>
-          "Guess a number between 1 and ten. You have <span class="tries"></span> tries"
+          "Guess a number between 1 and ten. You have <span class="tries">3</span> tries"
         </p>
 
-        <input type="number" id="num-guess">
+        <input type="number" id="num-guess" name="num-guess">
       </div>
 
       <div id="lion-room">
