--- a/index.html
+++ b/index.html
@@ -8,14 +8,22 @@
 
     <link rel="stylesheet" href="assets/style.css" type="text/css" />
   </head>
+
   <body>
-    <main id="game">
-      <!-- 
+
+    <h1 id="game"></h1>
+      <!--
         You have two options:
         1. Write HTML within this <main> element and manipulate it in the JS
         2. Or handle everything within the JS
       -->
-    </main>
+        <h1 class="roomName"></h1>
+        <p class="roomDescription">You have a syntax error</p>
+        <br>
+        <ul class="choiceText"></ul>
+        <br>
+        <div class="buttons"></div>
+
 
     <script src="assets/main.js"></script>
   </body>
